--- a/themes/demo/layouts/default.htm
+++ b/themes/demo/layouts/default.htm
@@ -16,8 +16,10 @@ description = "Default layout"
         <link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon.png">
         <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
         <link href="{{ 'assets/css/bootstrap.css'|theme }}" rel="stylesheet"/>
+
         <link href="{{ 'assets/css/gaia.css'|theme }}" rel="stylesheet"/>
 
+        <link href="../assets/css/gaia.css" rel="stylesheet"/>
         <!--     Fonts and icons     -->
         <link href='https://fonts.googleapis.com/css?family=Cambo|Poppins:400,600' rel='stylesheet' type='text/css'>
         <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
