--- a/themes/demo/partials/site/footer.htm
+++ b/themes/demo/partials/site/footer.htm
@@ -91,16 +91,20 @@
         </div>
     </div>
 </footer>
-<div class="modal fade" id="myModal" role="dialog">
+<div class="modal fade" id="register" role="dialog">
     <div class="modal-dialog">
 
         <!-- Modal content-->
         <div class="modal-content">
             <div class="custom-modal">
                 <div class="modal-header">
+                    <div class="modal-header-logo">
+                        <img src="/themes/demo/assets/images/register.png" class="modal-logo">
+                    </div>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
                 <div class="modal-body text-center">
+
                     <h2 style="color: #3295ff;">פרטי הרשמה</h2>
                     <h2>האקדמיה הבינלאומית למנעולנות</h2>
                     <h4> אנא השאירו פרטים ונחזור אליכם בהקדם להשלמת פרטי ההזמנה!</h4>
@@ -109,50 +113,50 @@
                                 <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
                         </div>
                         <div class="col-sm-6 text-left">
-                                <input type="text" class="login-input" name = "field2">
+                                <input type="text" class="login-input" name = "field2" onkeyup="rtl(this);" placeholder="">
                         </div>
                     </div>
                     <div class="row login-row">
                         <div class="col-sm-6 text-right">
-                            <input type="text" class="login-input" name = "field1">
+                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
                         </div>
                         <div class="col-sm-6 text-left">
-                            <input type="text" class="login-input" name = "field2">
+                            <input type="text" class="login-input" name = "field2" onkeyup="rtl(this);" placeholder="">
                         </div>
                     </div>
                     <div class="row login-row" >
                         <div class="col-sm-6 text-right">
-                            <input type="text" class="login-input" name = "field1">
+                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
                         </div>
                         <div class="col-sm-6 text-left">
-                            <input type="text" class="login-input" name = "field2">
+                            <input type="text" class="login-input" name = "field2" onkeyup="rtl(this);" placeholder="">
                         </div>
                     </div>
                     <div class="row login-row">
                         <div class="col-sm-12 text-center">
-                            <input type="text" class="login-input" name = "field1">
+                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
                         </div>
                     </div>
                     <div class="row login-row">
                         <div class="col-sm-12 text-center">
-                            <input type="text" class="login-input" name = "field1">
+                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
                         </div>
                     </div>
                     <div class="row login-row">
                         <div class="col-sm-12 text-center">
-                            <input type="text" class="login-input" name = "field1">
+                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="xcxcxcx">
                         </div>
                     </div>
-                    <div class="row login-row text-right">
-                        <input type="checkbox" name="vehicle" value="policy">erffffffffffff<br>
-                    </div>
+                    <!--<div class="row login-row text-right">-->
+                        <!--<input type="checkbox" name="vehicle" value="policy">erffffffffffff<br>-->
+                    <!--</div>-->
 
                 </div>
                 <div class="modal-footer">
-                    <div class="row login-row text-right">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <div class="row text-center">
+                        <input type="submit" class="contact-form button" name="login" onkeyup="rtl(this);" value=" שלח ">
                     </div>
-                    <div class="row login-row text-right">
+                    <div class="row text-center">
                         <p>* שדות חובה</p>
                     </div>
                 </div>
@@ -161,3 +165,85 @@
 
     </div>
 </div>
+<div class="modal fade" id="contact-us" role="dialog">
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="custom-modal">
+                <div class="modal-header">
+                    <div class="modal-header-logo">
+                        <img src="/themes/demo/assets/images/contact-us.png" class="modal-logo" style="padding: 10px 0px 10px 10px !important;">
+                    </div>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body text-center">
+
+                    <h2 style="color: #3295ff;">פרטי הרשמה</h2>
+                    <h2>האקדמיה הבינלאומית למנעולנות</h2>
+                    <h4> אנא השאירו פרטים ונחזור אליכם בהקדם להשלמת פרטי ההזמנה!</h4>
+                    <div class="row login-row">
+                        <div class="col-sm-6 text-right">
+                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
+                        </div>
+                        <div class="col-sm-6 text-left">
+                            <input type="text" class="login-input" name = "field2" onkeyup="rtl(this);" placeholder="">
+                        </div>
+                    </div>
+                    <div class="row login-row">
+                        <div class="col-sm-6 text-right">
+                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
+                        </div>
+                        <div class="col-sm-6 text-left">
+                            <input type="text" class="login-input" name = "field2" onkeyup="rtl(this);" placeholder="">
+                        </div>
+                    </div>
+                    <div class="row login-row" >
+                        <div class="col-sm-6 text-right">
+                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
+                        </div>
+                        <div class="col-sm-6 text-left">
+                            <input type="text" class="login-input" name = "field2" onkeyup="rtl(this);" placeholder="">
+                        </div>
+                    </div>
+                    <div class="row login-row">
+                        <div class="col-sm-12 text-center">
+                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
+                        </div>
+                    </div>
+                    <div class="row login-row">
+                        <div class="col-sm-12 text-center">
+                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
+                        </div>
+                    </div>
+                    <div class="row login-row">
+                        <div class="col-sm-12 text-center">
+                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="xcxcxcx">
+                        </div>
+                    </div>
+                    <!--<div class="row login-row text-right">-->
+                    <!--<input type="checkbox" name="vehicle" value="policy">erffffffffffff<br>-->
+                    <!--</div>-->
+
+                </div>
+                <div class="modal-footer">
+                    <div class="row text-center">
+                        <input type="submit" class="contact-form button" name="login" onkeyup="rtl(this);" value=" שלח ">
+                    </div>
+                    <div class="row text-center">
+                        <p>* שדות חובה</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+<script type="text/javascript">
+    function rtl(element)
+    {
+        if(element.setSelectionRange){
+            element.setSelectionRange(0,0);
+        }
+    }
+</script>
