--- a/themes/demo/partials/site/header.htm
+++ b/themes/demo/partials/site/header.htm
@@ -29,18 +29,18 @@
                     <a href="#"><i class="fa fa-twitter"></i> </a>
                 </li>
                 <li>
-                    <a href="/register">הרשמה </a>
+                    <a data-toggle="modal" data-target="#register">הרשמה </a>
                 </li>
                 <li>
                     <a href="#">/</a>
                 </li>
                 <li>
-                    <a data-toggle="modal" data-target="#myModal" > התחברות</a>
+                    <a href="/login" > התחברות</a>
                 </li>
 
 
                 <li>
-                    <a href="/contact-us"> צור קשר </a>
+                    <a data-toggle="modal" data-target="#contact-us"> צור קשר </a>
                 </li>
                 <li>
                     <a href="/shop-products"> חנות מוצרים </a>
