--- a/themes/demo/assets/css/gaia.css
+++ b/themes/demo/assets/css/gaia.css
@@ -3696,4 +3696,75 @@ label.list-group-radio:hover, label.list-group-radio:active {
   position: absolute;
   top: 10px; }
 
+.product {
+  box-shadow: 0px 3px 10px #e4e1e1;
+  margin-top: 10px;
+  margin-bottom: 10px; }
+
+.product-container {
+  background: #070f34;
+  color: #ffffff; }
+
+.product-cart {
+  margin-left: 10px;
+  width: 24px;
+  float: left; }
+
+.pirce-container {
+  background: #00c2ff;
+  font-weight: 600;
+  height: 24px;
+  vertical-align: middle;
+  font-size: 14px; }
+
+.star-rating .fa-star {
+  color: #3295ff; }
+
+.product-section {
+  width: auto;
+  background-color: #fff;
+  padding: 10px;
+  border-right: 4px solid #3295ff;
+  word-wrap: break-word;
+  box-shadow: 0px 3px 10px #e4e1e1;
+  text-align: right;
+  margin-top: 10px; }
+
+.product-title {
+  margin-left: 10px;
+  margin-right: 10px;
+  font-weight: 600; }
+
+.product-cart-content {
+  vertical-align: middle; }
+
+.checkout-section {
+  width: auto;
+  background-color: #D6F2F9;
+  padding: 10px;
+  word-wrap: break-word;
+  box-shadow: 0px 3px 10px #e4e1e1;
+  text-align: right;
+  margin-top: 10px;
+  margin-bottom: 20px; }
+
+.invite-more {
+  background: #070f34;
+  color: #3295ff;
+  border: 2px solid #070f34;
+  border-radius: 2px;
+  height: 30px;
+  width: 160px;
+  margin-bottom: 10px; }
+
+.invite-more.button:hover {
+  background: #3295ff;
+  border: 2px solid #3295ff;
+  color: #070f34;
+  -webkit-transition: all 300ms linear;
+  -moz-transition: all 300ms linear;
+  -o-transition: all 300ms linear;
+  -ms-transition: all 300ms linear;
+  transition: all 300ms linear; }
+
 /*# sourceMappingURL=gaia.css.map */
