--- a/themes/demo/assets/css/gaia.css
+++ b/themes/demo/assets/css/gaia.css
@@ -3767,4 +3767,18 @@ label.list-group-radio:hover, label.list-group-radio:active {
   -ms-transition: all 300ms linear;
   transition: all 300ms linear; }
 
+.product-detail-title {
+  margin-left: 10px;
+  font-weight: 600; }
+
+hr {
+  border: none;
+  height: 2px;
+  /* Set the hr color */
+  color: #D6F2F9;
+  /* old IE */
+  background-color: #D6F2F9;
+  /* Modern Browsers */
+  margin-right: -10px; }
+
 /*# sourceMappingURL=gaia.css.map */
