--- a/themes/demo/partials/site/footer.htm
+++ b/themes/demo/partials/site/footer.htm
@@ -109,41 +109,41 @@
                     <h2>האקדמיה הבינלאומית למנעולנות</h2>
                     <h4> אנא השאירו פרטים ונחזור אליכם בהקדם להשלמת פרטי ההזמנה!</h4>
                     <div class="row login-row">
-                        <div class="col-sm-6 text-right">
+                        <div class="col-xs-6 text-right">
                                 <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
                         </div>
-                        <div class="col-sm-6 text-left">
+                        <div class="col-xs-6 text-left">
                                 <input type="text" class="login-input" name = "field2" onkeyup="rtl(this);" placeholder="">
                         </div>
                     </div>
                     <div class="row login-row">
-                        <div class="col-sm-6 text-right">
+                        <div class="col-xs-6 text-right">
                             <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
                         </div>
-                        <div class="col-sm-6 text-left">
+                        <div class="col-xs-6 text-left">
                             <input type="text" class="login-input" name = "field2" onkeyup="rtl(this);" placeholder="">
                         </div>
                     </div>
                     <div class="row login-row" >
-                        <div class="col-sm-6 text-right">
+                        <div class="col-xs-6 text-right">
                             <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
                         </div>
-                        <div class="col-sm-6 text-left">
+                        <div class="col-xs-6 text-left">
                             <input type="text" class="login-input" name = "field2" onkeyup="rtl(this);" placeholder="">
                         </div>
                     </div>
                     <div class="row login-row">
-                        <div class="col-sm-12 text-center">
+                        <div class="col-xs-12 text-center">
                             <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
                         </div>
                     </div>
                     <div class="row login-row">
-                        <div class="col-sm-12 text-center">
+                        <div class="col-xs-12 text-center">
                             <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
                         </div>
                     </div>
                     <div class="row login-row">
-                        <div class="col-sm-12 text-center">
+                        <div class="col-xs-12 text-center">
                             <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="xcxcxcx">
                         </div>
                     </div>
@@ -183,41 +183,41 @@
                     <h2>האקדמיה הבינלאומית למנעולנות</h2>
                     <h4> אנא השאירו פרטים ונחזור אליכם בהקדם להשלמת פרטי ההזמנה!</h4>
                     <div class="row login-row">
-                        <div class="col-sm-6 text-right">
+                        <div class="col-xs-6 text-right">
                             <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
                         </div>
-                        <div class="col-sm-6 text-left">
+                        <div class="col-xs-6 text-left">
                             <input type="text" class="login-input" name = "field2" onkeyup="rtl(this);" placeholder="">
                         </div>
                     </div>
                     <div class="row login-row">
-                        <div class="col-sm-6 text-right">
+                        <div class="col-xs-6 text-right">
                             <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
                         </div>
-                        <div class="col-sm-6 text-left">
+                        <div class="col-xs-6 text-left">
                             <input type="text" class="login-input" name = "field2" onkeyup="rtl(this);" placeholder="">
                         </div>
                     </div>
                     <div class="row login-row" >
-                        <div class="col-sm-6 text-right">
+                        <div class="col-xs-6 text-right">
                             <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
                         </div>
-                        <div class="col-sm-6 text-left">
+                        <div class="col-xs-6 text-left">
                             <input type="text" class="login-input" name = "field2" onkeyup="rtl(this);" placeholder="">
                         </div>
                     </div>
                     <div class="row login-row">
-                        <div class="col-sm-12 text-center">
+                        <div class="col-xs-12 text-center">
                             <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
                         </div>
                     </div>
                     <div class="row login-row">
-                        <div class="col-sm-12 text-center">
+                        <div class="col-xs-12 text-center">
                             <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
                         </div>
                     </div>
                     <div class="row login-row">
-                        <div class="col-sm-12 text-center">
+                        <div class="col-xs-12 text-center">
                             <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="xcxcxcx">
                         </div>
                     </div>
