--- a/themes/demo/assets/scss/gaia.scss
+++ b/themes/demo/assets/scss/gaia.scss
@@ -166,7 +166,6 @@ a:hover {
 }
 
 .title-modern {
-  font-size: 3.2rem;
   font-family: "Poppins", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 300;
 }
@@ -3960,7 +3959,8 @@ body {
 
 }
 .login-input::-webkit-input-placeholder {
-  color: orange;
+  color: black !important;
+  font-weight: 300;
 }
 
 .modal-logo-png{
@@ -4425,4 +4425,67 @@ hr {
     padding: 20px;
   }
 
+}
+@media (max-width: 768px){
+  .img-book {
+    position: relative !important;
+    zoom: 0.6 !important;
+  }
+  .image{
+    height: 44vh !important;
+  }
+  .banner-text{
+    margin-top: 8rem;
+  }
+
+}
+@media (max-width: 1024px){
+
+  .image{
+    height: 44vh !important;
+  }
+  .banner-text{
+    margin-top: 8rem;
+  }
+
+}
+@media (max-width: 1988px){
+
+  .image{
+    height: 60vh !important;
+  }
+  .banner-text{
+    margin-top: 8rem !important;
+  }
+
+}
+@media (max-width: 420px){
+  .btn-banner-button{
+    color: #fff;
+    background-color: #3295ff;
+    border-color: transparent;
+    width: 12rem;
+    height: 3rem;
+    //float: left;
+    margin-top: 1rem;
+  }
+  .banner-text{
+    margin-top: 3rem;
+  }
+}
+@media (max-width: 375px){
+  .btn-banner-button{
+    color: #fff;
+    background-color: #3295ff;
+    border-color: transparent;
+    width: 8rem;
+    height: 1.5rem;
+    float: left !important;
+    font-size: 8px;
+    margin-top: 1rem;
+    margin-left: 6px;
+  }
+  .banner-text{
+    margin-top: 1rem;
+  }
 }
