--- a/themes/demo/layouts/default.htm
+++ b/themes/demo/layouts/default.htm
@@ -25,7 +25,7 @@ description = "Default layout"
         <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
         <link href="{{ 'assets/css/fonts/pe-icon-7-stroke.css'|theme }}" rel="stylesheet">
 
-        <link href="http://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
+        <!--<link href="http://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">-->
 
         {% styles %}
     </head>
