--- a/themes/demo/partials/site/footer.htm
+++ b/themes/demo/partials/site/footer.htm
@@ -80,6 +80,8 @@
                                 <a href="#">name@gmail.com</a>
                             </li>
                             <li>
+                                <a href="#"> All rights reserved Z Design@2017</a>
+                            </li>
                         </ul>
                     </nav>
                 </div>
@@ -110,51 +112,56 @@
                     <h4> אנא השאירו פרטים ונחזור אליכם בהקדם להשלמת פרטי ההזמנה!</h4>
                     <div class="row login-row">
                         <div class="col-xs-6 text-right">
-                                <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
+                                <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="*טלפון" required>
                         </div>
                         <div class="col-xs-6 text-left">
-                                <input type="text" class="login-input" name = "field2" onkeyup="rtl(this);" placeholder="">
+                                <input type="text" class="login-input" name = "field2" onkeyup="rtl(this);" placeholder="*שם מלא" required>
                         </div>
                     </div>
                     <div class="row login-row">
                         <div class="col-xs-6 text-right">
-                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
+                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="*מייל" required>
                         </div>
                         <div class="col-xs-6 text-left">
-                            <input type="text" class="login-input" name = "field2" onkeyup="rtl(this);" placeholder="">
+                            <input type="text" class="login-input" name = "field2" onkeyup="rtl(this);" placeholder="*ת.ז" required>
                         </div>
                     </div>
                     <div class="row login-row" >
                         <div class="col-xs-6 text-right">
-                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
+                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="מיקוד">
                         </div>
                         <div class="col-xs-6 text-left">
-                            <input type="text" class="login-input" name = "field2" onkeyup="rtl(this);" placeholder="">
+                            <input type="text" class="login-input" name = "field2" onkeyup="rtl(this);" placeholder="עיר">
                         </div>
                     </div>
                     <div class="row login-row">
                         <div class="col-xs-12 text-center">
-                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
+                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="רחוב">
                         </div>
                     </div>
                     <div class="row login-row">
                         <div class="col-xs-12 text-center">
-                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
+                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="*סיסמה" required>
                         </div>
                     </div>
                     <div class="row login-row">
                         <div class="col-xs-12 text-center">
-                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="xcxcxcx">
+                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="*אימות סיסמה" required>
                         </div>
                     </div>
-                    <!--<div class="row login-row text-right">-->
-                        <!--<input type="checkbox" name="vehicle" value="policy">erffffffffffff<br>-->
-                    <!--</div>-->
+                    <div class="row login-row">
+                        <div class="col-xs-12 text-right">
+                            <div class="checkbox">
+                                <input id="registercheckbox" type="checkbox">
+                                <label for="registercheckbox">הנני מאשר כי קראתי את התקנון </label>
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
                 <div class="modal-footer">
                     <div class="row text-center">
-                        <input type="submit" class="contact-form button" name="login" onkeyup="rtl(this);" value=" שלח ">
+                        <input type="submit" class="contact-form button" name="login"  value=" שלח ">
                     </div>
                     <div class="row text-center">
                         <p>* שדות חובה</p>
@@ -184,46 +191,51 @@
                     <h4> אנא השאירו פרטים ונחזור אליכם בהקדם להשלמת פרטי ההזמנה!</h4>
                     <div class="row login-row">
                         <div class="col-xs-6 text-right">
-                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
+                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="*טלפון" required>
                         </div>
                         <div class="col-xs-6 text-left">
-                            <input type="text" class="login-input" name = "field2" onkeyup="rtl(this);" placeholder="">
+                            <input type="text" class="login-input" name = "field2" onkeyup="rtl(this);" placeholder="*שם מלא" required>
                         </div>
                     </div>
                     <div class="row login-row">
                         <div class="col-xs-6 text-right">
-                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
+                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="*מייל" required>
                         </div>
                         <div class="col-xs-6 text-left">
-                            <input type="text" class="login-input" name = "field2" onkeyup="rtl(this);" placeholder="">
+                            <input type="text" class="login-input" name = "field2" onkeyup="rtl(this);" placeholder="*ת.ז" required>
                         </div>
                     </div>
                     <div class="row login-row" >
                         <div class="col-xs-6 text-right">
-                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
+                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="מיקוד">
                         </div>
                         <div class="col-xs-6 text-left">
-                            <input type="text" class="login-input" name = "field2" onkeyup="rtl(this);" placeholder="">
+                            <input type="text" class="login-input" name = "field2" onkeyup="rtl(this);" placeholder="עיר">
                         </div>
                     </div>
                     <div class="row login-row">
                         <div class="col-xs-12 text-center">
-                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
+                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="רחוב">
                         </div>
                     </div>
                     <div class="row login-row">
                         <div class="col-xs-12 text-center">
-                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="">
+                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="*סיסמה" required>
                         </div>
                     </div>
                     <div class="row login-row">
                         <div class="col-xs-12 text-center">
-                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="xcxcxcx">
+                            <input type="text" class="login-input" name = "field1" onkeyup="rtl(this);" placeholder="*אימות סיסמה" required>
                         </div>
                     </div>
-                    <!--<div class="row login-row text-right">-->
-                    <!--<input type="checkbox" name="vehicle" value="policy">erffffffffffff<br>-->
-                    <!--</div>-->
+                    <div class="row login-row">
+                        <div class="col-xs-12 text-right">
+                            <div class="checkbox">
+                                <input id="contactcheckbox" type="checkbox">
+                                <label for="contactcheckbox">הנני מאשר כי קראתי את התקנון </label>
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
                 <div class="modal-footer">
