--- a/themes/demo/partials/site/header.htm
+++ b/themes/demo/partials/site/header.htm
@@ -3,17 +3,16 @@
     <!-- if you want to keep the navbar hidden you can add this class to the navbar "navbar-burger"-->
     <div class="container">
         <div class="navbar-header">
+
             <button id="menu-toggle" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example">
-                <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar bar1"></span>
                 <span class="icon-bar bar2"></span>
                 <span class="icon-bar bar3"></span>
             </button>
-            <a href="#" class="navbar-brand">
 
-            </a>
+
         </div>
-        <div class="collapse navbar-collapse">
+        <div class="collapse navbar-collapse" id="example">
             <div class="nav navbar-nav navbar-right ">
                 <a href="/">
                     <div class="logo">
@@ -21,7 +20,26 @@
                     </div>
                 </a>
             </div>
-            <ul class="nav navbar-nav navbar-right navbar-uppercase">
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a data-toggle="modal" data-target="#contact-us"> צור קשר </a>
+                </li>
+                <li>
+                    <a href="/shop-products"> חנות מוצרים </a>
+                </li>
+                <li>
+                    <a href="/sample-lesson"> שיעור לדוגמא </a>
+                </li>
+                <li>
+                    <a href="/about-us"> אודות </a>
+                </li>
+                <li>
+                    <a href="/"> ראשי </a>
+                </li>
+
+
+            </ul>
+            <ul class="nav navbar-nav navbar-left">
                 <li>
                     <a href="#"><i class="fa fa-facebook-square"></i> </a>
                 </li>
@@ -37,25 +55,6 @@
                 <li>
                     <a href="/login" > התחברות</a>
                 </li>
-
-
-                <li>
-                    <a data-toggle="modal" data-target="#contact-us"> צור קשר </a>
-                </li>
-                <li>
-                    <a href="/shop-products"> חנות מוצרים </a>
-                </li>
-                <li>
-                    <a href="/sample-lesson"> שיעור לדוגמא </a>
-                </li>
-                <li>
-                    <a href="/about-us"> אודות </a>
-                </li>
-                <li>
-                    <a href="/main"> ראשי </a>
-                </li>
-
-
             </ul>
 
         </div>
