--- a/themes/demo/partials/site/footer.htm
+++ b/themes/demo/partials/site/footer.htm
@@ -3,17 +3,17 @@
         <div class="row text-center">
             <h1 style="color: white">השאירו פרטים ואנו נדאג לחזור אליכם בהקדם</h1>
         </div>
-        <div class="row">
-            <div class="col-sm-3">
+        <div class="row text-center" style="margin-top: 20px;">
+            <div class="col-sm-6 col-md-3">
                 <input type="button" class="contact-form button" name="contact-1" onkeyup="rtl(this);" value="חלש">
             </div>
-            <div class="col-sm-3">
+            <div class="col-sm-6  col-md-3">
                 <input type="email" class="contact-form" name="email" onkeyup="rtl(this);" placeholder="מייל">
             </div>
-            <div class="col-sm-3">
+            <div class="col-sm-6 col-md-3">
                 <input type="phone" class="contact-form" name="phone" onkeyup="rtl(this);" placeholder="טלפון">
             </div>
-            <div class="col-sm-3">
+            <div class="col-sm-6 col-md-3">
                 <input type="text" class="contact-form" name="fullname" onkeyup="rtl(this);" placeholder="שם מלא">
             </div>
         </div>
