--- a/themes/demo/assets/scss/gaia.scss
+++ b/themes/demo/assets/scss/gaia.scss
@@ -67,7 +67,7 @@ h6,
 .content-blog p {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  font-family: "Cambo", "Times New Roman", serif;
+  font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 }
 h1 a,
 .h1 a,
@@ -83,7 +83,7 @@ h6 a,
 .h6 a,
 .content-blog p a {
   font-size: inherit;
-  font-family: "Cambo", "Times New Roman", serif;
+  font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 }
 
 .content-blog {
@@ -1521,7 +1521,7 @@ input::-webkit-input-placeholder {
   margin-bottom: 3px;
 }
 .footer nav > ul a:not(.btn):hover, .footer nav > ul a:not(.btn):focus {
-  color: #3295ff;
+  color: #00c1ff;
 }
 .footer .social-area {
   padding: 15px 0;
@@ -1647,7 +1647,7 @@ input::-webkit-input-placeholder {
 .footer-ticker  {
   width: 100%;
   height: 4px;
-  background: #3295ff;
+  background: #00c1ff;
 }
 .footer-big hr {
   margin-bottom: 10px;
@@ -1905,7 +1905,7 @@ input::-webkit-input-placeholder {
   z-index: 3;
 }
 .card-client {
-  box-shadow: 0 32px 44px -24px rgba(0, 0, 0, 0.23), 0 20px 25px 0px rgba(0, 0, 0, 0.12), 0 15px 10px -10px rgba(0, 0, 0, 0.2);
+  box-shadow:0 32px 44px -24px rgba(0, 0, 0, 0.23), 0 -6px 25px 0px rgba(0, 0, 0, 0.12), 0 0px 7px -17px rgba(0, 0, 0, 0.2);
   background: #fff;
   border-radius: 2px !important;
   margin-bottom: 30px;
@@ -3798,7 +3798,7 @@ body {
 }
 .btn-banner-button{
   color: #fff;
-  background-color: #3295ff;
+  background-color: #00c1ff;
   border-color: transparent;
   width: 12rem;
   height: 3rem;
@@ -3806,7 +3806,7 @@ body {
   margin-top: 3rem;
 }
 .btn-banner-button:hover{
-  color: #3295ff;
+  color: #00c1ff;
   background-color: #fff;
   -webkit-transition: all 300ms linear;
   -moz-transition: all 300ms linear;
@@ -3823,21 +3823,21 @@ body {
 }
 .btn-percent-button{
   color: #fff;
-  background-color: #3295ff;
+  background-color: #00c1ff;
   border-color: transparent;
   width: 8rem;
   height: 2.5rem;
   margin-top: 1rem;
 }
 .btn-percent-button:hover{
-  color: #3295ff;
+  color: #00c1ff;
   background-color: #fff;
   -webkit-transition: all 300ms linear;
   -moz-transition: all 300ms linear;
   -o-transition: all 300ms linear;
   -ms-transition: all 300ms linear;
   transition: all 300ms linear;
-  border: 1px solid #3295ff;
+  border: 1px solid #00c1ff;
 }
 .img-circle {
   width: 200px;
@@ -3859,7 +3859,7 @@ body {
   font-weight: 700;
 }
 .btn-bottom-banner-button{
-  color: #3295ff;
+  color: #00c1ff;
   background-color: #091036;
   border-color: transparent;
   text-align: center;
@@ -3868,7 +3868,7 @@ body {
   margin-top: 1rem;
 }
 .btn-bottom-banner-button:hover{
-  color: #3295ff;
+  color: #00c1ff;
   background-color: #fff;
   -webkit-transition: all 300ms linear;
   -moz-transition: all 300ms linear;
@@ -3879,13 +3879,13 @@ body {
 .offer-certain-date{
   background: #091036;
   width: 100%;
-  height: 150px;
+  height: 165px;
   text-align: center;
   margin-top: -100px;
 }
 .btn-offer-date{
   color: #ffffff;
-  background-color: #3295ff;
+  background-color: #00c1ff;
   border-color: transparent;
   text-align: center;
   width: 12rem;
@@ -3895,9 +3895,9 @@ body {
   z-index: 10;
 }
 .btn-offer-date:hover{
-  color: #3295ff;
+  color: #00c1ff;
   background-color: #ffffff;
-  border-color: #3295ff;
+  border-color: #00c1ff;
   -webkit-transition: all 300ms linear;
   -moz-transition: all 300ms linear;
   -o-transition: all 300ms linear;
@@ -3917,7 +3917,7 @@ body {
 }
 .contact-form{
   background: transparent;
-  border: 2px solid #3295ff;
+  border: 2px solid #00c1ff;
   color: white;
   border-radius: 2px;
   height: 30px;
@@ -3925,8 +3925,8 @@ body {
   margin-bottom: 10px;
 }
 .contact-form.button{
-  background: #3295ff;
-  border: 2px solid #3295ff;
+  background: #00c1ff;
+  border: 2px solid #00c1ff;
   color: white;
   border-radius: 2px;
   height: 30px;
@@ -3935,8 +3935,8 @@ body {
 }
 .contact-form.button:hover{
   background: #fff;
-  border: 2px solid #3295ff;
-  color: #3295ff;
+  border: 2px solid #00c1ff;
+  color: #00c1ff;
 
   -webkit-transition: all 300ms linear;
   -moz-transition: all 300ms linear;
@@ -3945,13 +3945,13 @@ body {
   transition: all 300ms linear;
 }
 .custom-modal{
-  border: 4px solid #3295ff;
+  border: 4px solid #00c1ff;
 }
 .login-row{
   padding: 10px;
 }
 .login-input{
-  border: 1px solid #3295ff;
+  border: 1px solid #00c1ff;
   width: 100%;
   height: 30px;
   font-size: 26px;
@@ -3999,7 +3999,7 @@ body {
   height: 8px !important;
 }
 .lesson-banner-title{
-  color: #3295ff;
+  color: #00c1ff;
   background: #070f34;
 }
 .sample-info-text{
@@ -4009,7 +4009,7 @@ body {
 .class-select{
   text-align: right;
   a:hover{
-    color: #3295ff;
+    color: #00c1ff;
   }
   nav>ul>li.active{
     font-weight: bold !important;
@@ -4019,7 +4019,7 @@ body {
   width: auto;
   background-color: #fff;
   padding: 1px 12px;
-  border-right: 4px solid #3295ff;
+  border-right: 4px solid #00c1ff;
   word-wrap: break-word;
   box-shadow: 0px 3px 10px #e4e1e1;
   text-align: right;
@@ -4036,10 +4036,10 @@ body {
   margin-left: 20px !important;
 }
 label.list-group-radio:hover, label.list-group-radio:active {
-  color: #3295ff;
+  color: #00c1ff;
 }
 .class-section-title{
-  color: #3295ff;
+  color: #00c1ff;
 }
 .modal-header-logo{
   text-align: center;
@@ -4083,13 +4083,13 @@ label.list-group-radio:hover, label.list-group-radio:active {
 }
 
 .star-rating .fa-star{
-  color: #3295ff
+  color: #00c1ff
 }
 .product-section{
   width: auto;
   background-color: #fff;
   padding: 10px;
-  border-right: 4px solid #3295ff;
+  border-right: 4px solid #00c1ff;
   word-wrap: break-word;
   box-shadow: 0px 3px 10px #e4e1e1;
   text-align: right;
@@ -4115,7 +4115,7 @@ label.list-group-radio:hover, label.list-group-radio:active {
 }
 .invite-more{
   background: #070f34;
-  color: #3295ff;
+  color: #00c1ff;
   border: 2px solid #070f34;
   border-radius: 2px;
   height: 30px;
@@ -4123,8 +4123,8 @@ label.list-group-radio:hover, label.list-group-radio:active {
   margin-bottom: 10px;
 }
 .invite-more.button:hover{
-  background: #3295ff;
-  border: 2px solid #3295ff;
+  background: #00c1ff;
+  border: 2px solid #00c1ff;
   color: #070f34;
 
   -webkit-transition: all 300ms linear;
@@ -4318,9 +4318,9 @@ hr {
 .radio-success input[type="radio"]:checked + label::after {
   background-color: #5cb85c; }
 .btn-order-completed{
-  background: #3295ff;
+  background: #00c1ff;
   color: #ffffff;
-  border: 2px solid #3295ff;
+  border: 2px solid #00c1ff;
   border-radius: 2px;
   height: 30px;
   width: 160px;
@@ -4328,8 +4328,8 @@ hr {
 }
 .btn-order-completed.button:hover{
   background: #ffffff;
-  border: 2px solid #3295ff;
-  color: #3295ff;
+  border: 2px solid #00c1ff;
+  color: #00c1ff;
 
   -webkit-transition: all 300ms linear;
   -moz-transition: all 300ms linear;
@@ -4379,7 +4379,7 @@ hr {
 }
 .btn-make-reservation{
   background: #070f34;
-  color: #3295ff;
+  color: #00c1ff;
   border: 2px solid #070f34;
   border-radius: 2px;
   height: 40px;
@@ -4390,9 +4390,9 @@ hr {
   margin-top: 30px;
 }
 .btn-make-reservation:hover{
-  background: #3295ff;
+  background: #00c1ff;
   color: #070f34;
-  border: 2px solid #3295ff;
+  border: 2px solid #00c1ff;
   border-radius: 2px;
 
   -webkit-transition: all 300ms linear;
@@ -4416,7 +4416,7 @@ hr {
       margin-bottom: 10px;
     }
     .cross-title{
-      color: #3295ff;
+      color: #00c1ff;
       margin-bottom: 10px;
     }
   }
@@ -4426,6 +4426,17 @@ hr {
   }
 
 }
+
+.client-content{
+  padding-left: 3px !important;
+  padding-right: 3px !important;
+}
+.background-grey{
+  background: linear-gradient(180deg, #e7ebee 64%, white 36%);
+  padding: 0px;
+}
+
+
 @media (max-width: 768px){
   .img-book {
     position: relative !important;
@@ -4436,6 +4447,9 @@ hr {
   }
   .banner-text{
     margin-top: 8rem;
+  }
+  .offer-certain-date{
+    height: 136px;
   }
 
 }
@@ -4462,7 +4476,7 @@ hr {
 @media (max-width: 420px){
   .btn-banner-button{
     color: #fff;
-    background-color: #3295ff;
+    background-color: #00c1ff;
     border-color: transparent;
     width: 12rem;
     height: 3rem;
@@ -4476,7 +4490,7 @@ hr {
 @media (max-width: 375px){
   .btn-banner-button{
     color: #fff;
-    background-color: #3295ff;
+    background-color: #00c1ff;
     border-color: transparent;
     width: 8rem;
     height: 1.5rem;
@@ -4487,5 +4501,10 @@ hr {
   }
   .banner-text{
     margin-top: 1rem;
+  }
+}
+@media (max-width: 596px){
+  .btn-offer-date {
+    margin-top: 0;
   }
 }
