--- a/themes/demo/assets/scss/gaia.scss
+++ b/themes/demo/assets/scss/gaia.scss
@@ -4413,7 +4413,8 @@ hr {
   margin-bottom: 20px;
   color:#ffffff;
   .cross-container-header{
-    background: #070f34 ;
+    background: #030c41;
+    height: 100%;
     .cross-image{
       margin-top: -40px;
       margin-bottom: 10px;
@@ -4438,7 +4439,9 @@ hr {
   background: linear-gradient(180deg, #e7ebee 64%, white 36%);
   padding: 0px;
 }
-
+.fa-color{
+  color:#00c1ff;
+}
 
 @media (max-width: 768px){
   .img-book {
