--- a/themes/demo/assets/css/gaia.css
+++ b/themes/demo/assets/css/gaia.css
@@ -3992,6 +3992,25 @@ hr {
   background-color: #5cb85c; }
 
 .btn-order-completed {
+  background: #007edd;
+  color: #ffffff;
+  border: 2px solid #007edd;
+  border-radius: 2px;
+  height: 30px;
+  width: 160px;
+  margin-bottom: 10px; }
+
+.btn-order-completed.button:hover {
+  background: #ffffff;
+  border: 2px solid #007edd;
+  color: #007edd;
+  -webkit-transition: all 300ms linear;
+  -moz-transition: all 300ms linear;
+  -o-transition: all 300ms linear;
+  -ms-transition: all 300ms linear;
+  transition: all 300ms linear; }
+
+.btn-order-finished {
   background: #00c1ff;
   color: #ffffff;
   border: 2px solid #00c1ff;
@@ -4000,7 +4019,7 @@ hr {
   width: 160px;
   margin-bottom: 10px; }
 
-.btn-order-completed.button:hover {
+.btn-order-finished.button:hover {
   background: #ffffff;
   border: 2px solid #00c1ff;
   color: #00c1ff;
@@ -4010,29 +4029,10 @@ hr {
   -ms-transition: all 300ms linear;
   transition: all 300ms linear; }
 
-.btn-order-finished {
-  background: #00C0FE;
-  color: #ffffff;
-  border: 2px solid #00C0FE;
-  border-radius: 2px;
-  height: 30px;
-  width: 160px;
-  margin-bottom: 10px; }
-
-.btn-order-finished.button:hover {
-  background: #ffffff;
-  border: 2px solid #00C0FE;
-  color: #00C0FE;
-  -webkit-transition: all 300ms linear;
-  -moz-transition: all 300ms linear;
-  -o-transition: all 300ms linear;
-  -ms-transition: all 300ms linear;
-  transition: all 300ms linear; }
-
 .btn-order-three {
-  background: #67D7FD;
+  background: #67d9ff;
   color: #ffffff;
-  border: 2px solid #67D7FD;
+  border: 2px solid #67d9ff;
   border-radius: 2px;
   height: 30px;
   width: 160px;
@@ -4040,8 +4040,8 @@ hr {
 
 .btn-order-three.button:hover {
   background: #ffffff;
-  border: 2px solid #67D7FD;
-  color: #67D7FD;
+  border: 2px solid #67d9ff;
+  color: #67d9ff;
   -webkit-transition: all 300ms linear;
   -moz-transition: all 300ms linear;
   -o-transition: all 300ms linear;
@@ -4049,9 +4049,9 @@ hr {
   transition: all 300ms linear; }
 
 .btn-make-reservation {
-  background: #070f34;
+  background: #030c41;
   color: #00c1ff;
-  border: 2px solid #070f34;
+  border: 2px solid #030c41;
   border-radius: 2px;
   height: 40px;
   width: 200px;
@@ -4062,7 +4062,7 @@ hr {
 
 .btn-make-reservation:hover {
   background: #00c1ff;
-  color: #070f34;
+  color: #030c41;
   border: 2px solid #00c1ff;
   border-radius: 2px;
   -webkit-transition: all 300ms linear;
