contact cross fix

--- a/themes/demo/partials/site/footer.htm
+++ b/themes/demo/partials/site/footer.htm
@@ -186,8 +186,8 @@
                 </div>
                 <div class="modal-body text-center">
 
-                    <h2 style="color: #3295ff;">פרטי הרשמה</h2>
-                    <h2>האקדמיה הבינלאומית למנעולנות</h2>
+                    <h2 style="color: #00afff;font-weight: 300">פרטי הרשמה</h2>
+                    <h2><strong>האקדמיה הבינלאומית למנעולנות</strong></h2>
                     <h4> אנא השאירו פרטים ונחזור אליכם בהקדם להשלמת פרטי ההזמנה!</h4>
                     <div class="row login-row">
                         <div class="col-xs-6 text-right">
