--- a/themes/demo/assets/css/gaia.css
+++ b/themes/demo/assets/css/gaia.css
@@ -3566,8 +3566,8 @@ body {
   border: 2px solid #00c1ff;
   color: white;
   border-radius: 2px;
-  height: 30px;
-  width: 160px;
+  height: 36px;
+  width: 180px;
   margin-bottom: 10px; }
 
 .contact-form.button {
@@ -3575,8 +3575,8 @@ body {
   border: 2px solid #00c1ff;
   color: white;
   border-radius: 2px;
-  height: 30px;
-  width: 160px;
+  height: 36px;
+  width: 180px;
   margin-bottom: 10px; }
 
 .contact-form.button:hover {
@@ -4091,6 +4091,25 @@ hr {
   .cross-container .cross-container-body {
     color: #000000;
     padding: 20px; }
+
+.send-invitation {
+  background: #00c1ff;
+  color: #ffffff;
+  border: 2px solid #00c1ff;
+  border-radius: 2px;
+  height: 40px;
+  width: 160px;
+  font-weight: 600; }
+
+.send-invitation.button:hover {
+  background: #ffffff;
+  border: 2px solid #00c1ff;
+  color: #00c1ff;
+  -webkit-transition: all 300ms linear;
+  -moz-transition: all 300ms linear;
+  -o-transition: all 300ms linear;
+  -ms-transition: all 300ms linear;
+  transition: all 300ms linear; }
 
 .client-content {
   padding-left: 3px !important;
